--- a/DIYX.Music.Youtube/MainWindow.xaml
+++ b/DIYX.Music.Youtube/MainWindow.xaml
@@ -7,12 +7,13 @@
         mc:Ignorable="d"
         Title="MainWindow" Height="350" Width="525" MouseWheel="Grid_MouseWheel" Background="Black">
     <Grid HorizontalAlignment="Left" Width="517">
-        <Button Name="btnOpenAudioFile" Click="btnOpenAudioFile_Click" Margin="217,75,221,208">Open File</Button>
+        <Button Name="btnOpenAudioFile" Click="btnOpenAudioFile_Click" Margin="133,77,305,206">Open File</Button>
         <Label Name="lblStatus" Content="Not Playing..." HorizontalAlignment="Center" Margin="217,21,221,249" Foreground="Red"></Label>
         <Button x:Name="btnPlay" Click="btnPlay_Click" Content="Play" Margin="133,189,305,94"/>
         <Button x:Name="btnPause" Margin="217,189,221,94" Click="btnPause_Click" Content="Pause"/>
         <Button x:Name="btnStop" Click="btnStop_Click" Content="Stop" Margin="301,189,137,94"/>
         <Slider Name="sldrProgress" Margin="50,244,50,44" Thumb.DragStarted="sldrProgress_DragStarted" Thumb.DragCompleted="sldrProgress_DragCompleted"></Slider>
         <ProgressBar Name="sldrVolume" HorizontalAlignment="Left" Margin="395,292,0,0" VerticalAlignment="Top" Width="112" Maximum="1" Height="17"/>
+        <Button x:Name="btnOpenYoutubeDialog" Click="btnOpenYoutubeDialog_Click" Margin="301,77,137,206" Content="Youtube"/>
     </Grid>
 </Window>
